add new component and refactor

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App-wrapper {
     width: 1000px;
     margin: 0 auto;
+    background-color: #000;
 }
 .content{
     width: 70%;
@@ -9,6 +10,7 @@
 
 .body {
     display: flex;
+
 }
 
 
