--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,17 @@
 .siteBar {
     width: 30%;
     background-color: #dea07f;
+    margin-right: 10px;
+
 }
-.item>a{
+.link{
     color: white;
+    margin: 10px;
+    font-family: sans-serif;
+    text-decoration: none;
+    font-size: 20px;
+
+}
+.link.active{
+    color: gold;
 }
