--- a/src/components/Dialogs/Dialog/Dialog.module.css
+++ b/src/components/Dialogs/Dialog/Dialog.module.css
@@ -17,8 +17,12 @@
 
     font-size: 20px;
     padding-bottom: 10px;
+    font-weight: bold;
+    font-style: italic;
 }
-
+.dialog{
+    margin-bottom: 10px;
+}
 
 
 
