lesson 61 add API

--- a/src/components/Profile/MyPosts/Discription/MyDiscription.module.css
+++ b/src/components/Profile/MyPosts/Discription/MyDiscription.module.css
@@ -2,8 +2,13 @@
     display: flex;
 }
 .avatar {
-    width: 200px;
+    min-width: 200px;
 }
 .description {
     margin-left: 40px;
+}
+.contacts{
+}
+.keys{
+    font-weight: bold;
 }
