--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,6 +2,7 @@
     background-color: #28b028;
     height: 80px;
     margin-bottom: 10px;
+    position: relative;
 
 }
 
@@ -11,9 +12,13 @@
     margin: 10px;
 }
 .loginBlock{
-    float: right;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 20px;
     
 }
 .loginBlock a {
+
     color: #fff;
 }
