--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,9 +1,11 @@
 .container {
     background-color: gold;
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 10px;
+
+}
+.texterror{
+    color: red;
 }
 
 
